--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
   yell:
     description: yell command
     aliases: [y, yc, yellchat]
+  whisper:
+    description: whisper command
+    aliases: [w]
