--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,4 +4,5 @@ WHISPER_CHAT_FORMAT: "&b%player% &7&owhispers: &b%chat%"
 WHISPER_CHAT_RADIUS: 1
 TWITTER_CHAT_FORMAT: "&7(Twitter) &b%player%&7: &b%chat%"
 GLOBAL_CHAT_FORMAT: "&b%player%&7: &b%chat%"
+GLOBAL_CHAT_RADIUS: 15
 NO_PERMISSION: "&cYou dont have permission to perform this command."
